# deseq2-rs-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
deseq2_rs_py/: __init__.py  dataset.py  deseq2.py  wrappers.py
examples/: main.py
package/deseq2_rs_py/: __init__.py  dataset.py  deseq2.py  wrappers.py
src/: alg.rs  fit_beta.rs  lib.rs  math.rs
