[package]
name = "deseq2_rs_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "^0.15.3"
numpy = "0.17.2"
rand = "^0.8.5" # Specific for this example
ndarray-linalg = "0.16.0"
nalgebra = "0.30.1"
nalgebra-glm = "0.16.0"
nshare = { version = "0.9.0" }

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]

