[package]
name = "deseq2_rs_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
numpy = { git = "https://github.com/PyO3/rust-numpy.git", features = ["nalgebra"] }
rand = "^0.8.5" # Specific for this example
nalgebra = { version = "0.31.4" }
nalgebra-glm = "0.17.0"
nalgebra-lapack = "0.23.0"
num-traits = "0.2.15"
statrs = "0.16.0"
rayon = "1.6.1"

[package.metadata.maturin]
name = "deseq2_rs_py._internal"
