[project]
name = "deseq2-rs-py"
version = "0.1.0"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[build-system]
requires = ["maturin>=0.12,<0.13", "pandas", "numpy"]
build-backend = "maturin"

[tool.pylint.format]
max-line-length = 120
good-names = ["i","j","k","ex","Run","_","df","ax","plt","y","x"]